force-app/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <label>Competition</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Prog.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competition</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>