force-app/main/default/objects/Competition__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hommel</fullName>
            </value>
            <value>
                <fullName>TESA</fullName>
                <label>Sylvac - TESA - Fowler</label>
            </value>
            <value>
                <fullName>MAHR</fullName>
            </value>
            <value>
                <fullName>MARPOSS</fullName>
            </value>
            <value>
                <fullName>Dr. SCHNEIDER</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Smart Vision</fullName>
            </value>
            <value>
                <fullName>Zeiss</fullName>
            </value>
            <value>
                <fullName>Sinowon</fullName>
            </value>
            <value>
                <fullName>Keyence</fullName>
            </value>
            <value>
                <fullName>LTF-Microtecnica</fullName>
            </value>
            <value>
                <fullName>QCM Series</fullName>
            </value>
            <value>
                <fullName>OGP</fullName>
            </value>
            <value>
                <fullName>Dr.Schneider</fullName>
            </value>
            <value>
                <fullName>Vision Eng.</fullName>
            </value>
            <value>
                <fullName>Ayonis</fullName>
            </value>
            <value>
                <fullName>MARPOSS Optoflash S10 / S20 / S30</fullName>
            </value>
            <value>
                <fullName>MARPOSS Optoquick M60 / M9 / L60 / L90 / XL120</fullName>
            </value>
            <value>
                <fullName>Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Werth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>