force-app/main/default/objects/Competition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Competitor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>CS155</fullName>
            </value>
            <value>
                <fullName>CS305</fullName>
            </value>
            <value>
                <fullName>CS308</fullName>
            </value>
            <value>
                <fullName>CS605</fullName>
            </value>
            <value>
                <fullName>C203</fullName>
            </value>
            <value>
                <fullName>C305</fullName>
            </value>
            <value>
                <fullName>C310</fullName>
                <label>C308</label>
            </value>
            <value>
                <fullName>C314</fullName>
            </value>
            <value>
                <fullName>C505</fullName>
                <label>C605</label>
            </value>
            <value>
                <fullName>C510</fullName>
                <label>C608</label>
            </value>
            <value>
                <fullName>C514</fullName>
                <label>C614</label>
            </value>
            <value>
                <fullName>C810</fullName>
                <label>C908</label>
            </value>
            <value>
                <fullName>C814</fullName>
                <label>C914</label>
            </value>
            <value>
                <fullName>C1014</fullName>
            </value>
            <value>
                <fullName>C1023</fullName>
            </value>
            <value>
                <fullName>C1208</fullName>
            </value>
            <value>
                <fullName>CA605</fullName>
            </value>
            <value>
                <fullName>CA610</fullName>
                <label>CA608</label>
            </value>
            <value>
                <fullName>CA614</fullName>
            </value>
            <value>
                <fullName>CA618</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 52 (horizontal)</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 25</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 50</fullName>
            </value>
            <value>
                <fullName>Tesa Scan 50 Plus</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 350x80</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 350x120</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 750x80</fullName>
            </value>
            <value>
                <fullName>Mahr Shaft scope 750x120</fullName>
            </value>
            <value>
                <fullName>VMM100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>